--- a/server/package.json
+++ b/server/package.json
@@ -10,5 +10,15 @@
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^2.0.14"
+  },
+  "dependencies": {
+    "axios": "^0.24.0",
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mysql2": "^2.3.3-rc.0",
+    "passport": "^0.5.0",
+    "passport-http": "^0.3.0",
+    "passport-jwt": "^4.0.0"
   }
 }
