--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "socket.io-client": "^4.3.2",
     "styled-components": "^5.3.3",
     "sweetalert2": "^11.1.10",
     "web-vitals": "^1.1.2"
