--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "mysql2": "^2.3.3-rc.0",
     "passport": "^0.4.1",
     "passport-http": "^0.3.0",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "socket.io": "^4.3.2"
   }
 }
