--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
+    "simple-peer": "^9.11.0",
     "socket.io-client": "^4.3.2",
     "styled-components": "^5.3.3",
     "sweetalert2": "^11.1.10",
