--- a/server/package.json
+++ b/server/package.json
@@ -17,11 +17,13 @@
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "mysql2": "^2.3.3-rc.0",
     "passport": "^0.4.1",
     "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.0",
-    "socket.io": "^4.3.2"
+    "socket.io": "^4.3.2",
+    "uuid": "^8.3.2"
   }
 }
