--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,8 @@
     "cors": "^2.8.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
+    "multer": "^1.4.3",
     "mysql2": "^2.3.3-rc.0",
     "passport": "^0.4.1",
     "passport-http": "^0.3.0",
