--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-scrollable-feed": "^1.3.1",
     "redux": "^4.1.2",
     "simple-peer": "^9.11.0",
     "socket.io-client": "^4.3.2",
